--- a/publications.html
+++ b/publications.html
@@ -85,9 +85,9 @@
 
 <div><div>[41] L. Ramme, B. Blanz, C. Wells, T.E. Wong, W. Schoenberg, C. Smith, and C. Li  (2025), 
 	<u>Feedback-based sea level rise impact modelling for integrated assessment models with FRISIAv1.0</u>,
-	<i>Geoscientific Model Development (accepted)</i>,
+	<i>Geoscientific Model Development</i>,
 	DOI: 10.5194/egusphere-2025-1875.
-	<a href="https://doi.org/10.5194/egusphere-2025-1875">Link</a></div></div>
+	<a href="https://doi.org/10.5194/gmd-18-10017-2025">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[40] Darnell, C., Rennels, L., Errickson, F., Wong, T., Srikrishnan, V. (2025), 
