--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,10 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
+<div><div><b>Estevez Loza, C., K. Feke</b> V. Srikrishnan, and T.E. Wong (n.d.), 
+	<u>Managing Coastal Risks by Integrating Sea-Level Uncertainty and Robust Decision-Making into a Coastal Adaptation Model</u>. 
+<div><br /></div>
+
 
 							
 							<div><br /></div>
@@ -83,20 +87,34 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div>[41] L. Ramme, B. Blanz, C. Wells, T.E. Wong, W. Schoenberg, C. Smith, and C. Li  (2025), 
+<div><div>[43] S. Kaylor, Y. Elshorbany, T.E. Wong (2026), 
+	<u>Economic Cost of No-Adaptation and Least-Cost Cases of Sea Level Rise in the U.S.</u>,
+	<i>Environmental Research Communications (accepted)</i>,
+	DOI: TBD.
+	<a href="">Link</a></div></div>
+<div><br /></div>
+
+<div><div>[42] L. Ramme, B. Blanz, C. Wells, T.E. Wong, W. Schoenberg, C. Smith, and C. Li  (2025), 
 	<u>Feedback-based sea level rise impact modelling for integrated assessment models with FRISIAv1.0</u>,
 	<i>Geoscientific Model Development</i>,
 	DOI: 10.5194/egusphere-2025-1875.
 	<a href="https://doi.org/10.5194/gmd-18-10017-2025">Link</a></div></div>
 <div><br /></div>
 
-<div><div>[40] Darnell, C., Rennels, L., Errickson, F., Wong, T., Srikrishnan, V. (2025), 
+<div><div>[41] Darnell, C., Rennels, L., Errickson, F., Wong, T., Srikrishnan, V. (2025), 
 	<u>The interplay of future emissions and geophysical uncertainties for projections of sea-level rise</u>,
 	<i>Nature Climate Change</i>,
 	DOI: 10.1038/s41558-025-02457-0.
 	<a href="https://doi.org/10.1038/s41558-025-02457-0">Link</a></div></div>
 <div><br /></div>
-							
+
+<div><div>[40] Wong, TE, R. Sriver, and A. Garner (2025), 
+	<u>Chapter 19: Characterizing The Uncertainty Surrounding Sea-Level Projections To Inform Decisions</u>,
+	in: <i>Uncertainty in Climate Change Research: An Integrated Approach</i>, Eds. L. Mearns, C.E. Forest, H.J. Fowler, R. Lempert, R.L. Wilby. Springer.
+	ISBN 978-3031855412.
+	<a href="https://www.amazon.com/Uncertainty-Climate-Change-Research-Integrated/dp/3031855418">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[39] C. Cammarota, M. Foster, M. Verostek, <b>K. Patterson, M. McIntyre, K. Dorsey, A. Camacho-Betancourt</b>, T.E. Wong, B. Zwickl (2025), 
 	<u>Social computational literacy in practice: a framework describing STEM researchers’ communication</u>,
 	<i>Journal of STEM Education Research</i>,
