--- a/publications.html
+++ b/publications.html
@@ -124,17 +124,15 @@
 
 <div><div>[38] M. Foster, A. Mitelman, C. Cammarota, B. Bogstad, B. Zwickl, T.E. Wong (2025), 
 	<u>Students’ Perceptions of their Professors’ Integration of Computation in their Probability and Statistics Courses</u>,
-	<i>(in press) Proceedings of the 27th Annual Conference on Research in Undergraduate Mathematics Education</i>, 
-	S. Cook (ed), Alexandria, VA, 27 Feb-1 Mar 2025,
-	DOI: TBA.
+	in S. Cook, B.P. Katz, & K. Melhuish (Eds.),<i> Proceedings of the 27th Annual Conference on Research in Undergraduate Mathematics Education</i>, 
+	pp 198-205, SIGMAA on RUME, Alexandria, VA.
 	<a href="http://sigmaa.maa.org/rume/crume2025/058.pdf">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[37] M. Foster, M.L. Reed, C. Cammarota, B. Zwickl, T.E. Wong (2025), 
 	<u>Computational Tools’ Mediation of Argumentation in Undergraduate Probability and Statistics.</u>,
-	<i>(in press) Proceedings of the 27th Annual Conference on Research in Undergraduate Mathematics Education</i>, 
-	S. Cook (ed), Alexandria, VA, 27 Feb-1 Mar 2025,
-	DOI: TBA.
+	in S. Cook, B.P. Katz, & K. Melhuish (Eds.),<i> Proceedings of the 27th Annual Conference on Research in Undergraduate Mathematics Education</i>, 
+	pp 379-386, SIGMAA on RUME, Alexandria, VA.
 	<a href="http://sigmaa.maa.org/rume/crume2025/111.pdf">Link</a></div></div>
 <div><br /></div>
 
