--- a/publications.html
+++ b/publications.html
@@ -90,8 +90,8 @@
 <div><div>[43] S. Kaylor, Y. Elshorbany, T.E. Wong (2026), 
 	<u>Economic Cost of No-Adaptation and Least-Cost Cases of Sea Level Rise in the U.S.</u>,
 	<i>Environmental Research Communications (accepted)</i>,
-	DOI: TBD.
-	<a href="">Link</a></div></div>
+	DOI: 10.1088/2515-7620/ae3b13.
+	<a href="https://iopscience.iop.org/article/10.1088/2515-7620/ae3b13">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[42] L. Ramme, B. Blanz, C. Wells, T.E. Wong, W. Schoenberg, C. Smith, and C. Li  (2025), 
